# ZongHeng

./: .gitignore  CMakeLists.txt  README.md
example/: chainable_example.cpp  example.cpp
source/: CMakeLists.txt  Qin.cpp  Qin.h  QinUtils.h  ZongHeng.h
source/core/: ZongHengBase.h
source/nodes/: Qin.h  Yi.h
source/operations/: Combinators.h  Operators.h
test/: CMakeLists.txt  boundary_test.cpp  combinators_test.cpp  edge_cases_test.cpp  lian_test.cpp  operators_test.cpp  plus_string_test.cpp  plus_test.cpp  test_utils.h  type_safety_test.cpp  yi_transform_test.cpp
